# MolecularDynamics

./: CMakeLists.txt  LICENSE  README.md  big.xyz  compile.sh  file.xyz  main.c  script.r
examples/H2/: H2.xyz  script.r
examples/MeCOOH/: me.xyz  script.r
examples/chair-boat/: boat.xyz  script.r
examples/methanol/: methanol.xyz  script.r
examples/water/: water.r  water.xyz
src/: main.c  remove_migration.py
